--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "release:alpha": "standard-version --prerelease alpha",
     "compose:build": "docker-compose build",
     "compose:up": "docker-compose up --abort-on-container-exit --exit-code-from bacnet-client",
-    "docker": "npm run compose:build && npm run compose:up",
-    "prepublishOnly": "npm run lint && npm run coverage && npm run docker && npm run docs"
+    "docker": "npm run compose:build && npm run compose:up"
   },
   "repository": {
     "type": "git",
